# techpulse-ai

./: .gitignore  BACKEND_CHANGES.md  CODING_STANDARDS.md  Makefile  README.md  developer.md  main.py  pyproject.toml  techpulse-ai-v2-blueprint.md
.github/workflows/: cleanup.yml  collect.yml  collector.yml  delivery.yml  digest.yml  keepalive.yml
migrations/: 001_add_score_topics.sql  006_rls_security.sql  007_telemetry_refactor.sql  008_personalization.sql  add_increment_source_click.sql  master_schema_v2.sql  setup_supabase.sql
migrations/archive/: 002_add_delivered_flag.sql  003_telemetry.sql  004_dynamic_config.sql  005_multi_tenancy.sql  009_smart_refresh.sql  010_add_theme_column.sql  v2_001_enable_vector.sql  v2_002_events.sql  v2_003_feedback.sql  v2_004_source_health.sql  v2_005_rpc_functions.sql  v2_006_telemetry_rpc.sql  v2_master_migration.sql
services/collector/: filter.py  main.py  sources.py
services/delivery/: main.py
services/monitor/: app.py
services/summarizer/: main.py
shared/: config.py  db.py  redis_client.py
src/cli/: ops.py  user.py
src/services/agents/: composer_agent.py  research_agent.py
src/services/collector/: filter.py  main.py
src/services/delivery/: main.py
src/services/enricher/: clusterer.py  deduplicator.py  embedder.py  novelty.py
src/services/monitor/: app.py
src/services/ranker/: scorer.py
src/shared/: ai_utils.py  config.py  db.py  maintenance.py  models.py  monitor.py  redis_client.py  utils.py
tests/e2e/: test_system.py
tests/unit/: test_fixes.py  test_logic.py
web/src/: index.css
(+4 files in other folders)
