[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/shared", "src/services"]

[tool.uv]
package = true


[project]
name = "techpulse-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "groq>=0.9.0,<1",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.4",
    "supabase>=2.28.3",
    "tenacity>=9.1.4",
    "typer>=0.12.0",
    "upstash-redis>=1.7.0",
]

[project.scripts]
techpulse = "cli.user:app"
techpulse-ops = "cli.ops:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
